# LaProxy

./: .dockerignore  .gitignore  .python-version  Dockerfile  LICENSE  README.md  dockerfile  example.py  pyproject.toml  shell.nix
.github/workflows/: docker-publish.yml  documentation.yml  latest-tag.yml  pypi-publish.yml  python-app.yml
backend/: __init__.py  _backend.py  _modelupdater.py  _servicehandler.py
laproxy/: __init__.py  _basemodel.py  _http.py  _judge.py  _laproxy.py  _tcp.py  _tcpwaf.py
pyproxy/: __init__.py  _http.py  _pyproxy.py  _tcp.py
samples/: backend.py  docker-compose.yml  httpproxy.py  smartproxy.py  tcplineproxy.py  tcpproxy.py
tests/: docker-compose.yml  test_proxy.py
