[tool.poetry]
name = "laproxy"
version = "1.1.0"
description = "An easy to use proxy for A/D CTFs"
authors = ["Riccardo Isola <riky.isola@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/rikyiso01/LaProxy"
documentation = "https://rikyiso01.github.io/LaProxy"
keywords = ["proxy", "ctf-tools", "attack-defense-ctf"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Topic :: Internet :: Proxy Servers",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.8"
aiotools = "^1.6.1"
typing-extensions = "^4.7.1"
attrs = "^23.1.0"

[tool.poetry.group.dev.dependencies]
httpx = "^0.24.1"
pytest = "^7.1.2"
pytest-asyncio = "^0.18.3"
pytest-timeout = "^2.1.0"
pdoc = "^14.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
timeout = 60
